sonarr/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name:      sonarr
  namespace: sonarr
spec:
  parentRefs:
    - name:        traefik-gateway
      namespace:   traefik
      sectionName: web
  hostnames:
    - "whoami.localhost"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: whoami
          port: 80
